# seleneko

./: LICENSE  MANIFEST.in  MODULE.bazel  NOTICE  README.adoc  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: commit_lint.yml  python_ci.yml  rust_ci.yml
pythoneko/: README.md  __init__.py  setup.cfg
pythoneko/_config/: config.py
pythoneko/automation/: __init__.py  browser_client.py
pythoneko/core/: __init__.py
pythoneko/handler/: use_selenium.py
pythoneko/tests/: conftest.py  pytest_main.py  test_browser_client.py
seleneko/: BUILD.bazel  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  setup.cfg
seleneko/.github/workflows/: release.yml
seleneko/automation/: __browser_client.py  __init__.py  client_base.py  driver_factory.py  smart_actions.py
seleneko/core/: config.py
seleneko/tests/: BUILD.bazel  conftest.py  pytest_main.py  test_browser_client.py
tests/: BUILD.bazel  pytest_main.py  test_usesel.py
