[metadata]
name = seleneko
version = 0.1.0
author = Nico
author_email = leaf.sun2@gmail.com
description = For using selenium comfortably
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ardnico/seleneko
license = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    selenium>=4.10.0

[options.entry_points]
console_scripts =
    seleneko = seleneko.__main__:main

[options.packages.find]
exclude =
    tests
