[metadata]
name = seleneko
version = 0.1.0
author = Niko
author_email = niko@example.com
description = Selenium-based automation toolkit
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/seleneko
project_urls =
    Bug Tracker = https://github.com/yourname/seleneko/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    selenium>=4.15.0
    cryptography>=41.0.0

[options.extras_require]
dev =
    pytest>=7.0
    black
    flake8
    isort
