[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seleneko"
version = "0.1.0"
description = "Selenium-based automation toolkit with resilient browser control."
readme = "README.md"
authors = [
    { name = "Niko", email = "niko@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/seleneko"
Repository = "https://github.com/yourname/seleneko"

[project.scripts]
seleneko = "seleneko.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seleneko*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
