[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seleneko"
version = "0.1.0"
description = "Selenium-based automation toolkit with resilient browser control."
readme = "README.md"
authors = [
    { name = "Nico", email = "leaf.sun2@gmail.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<4.0"
dependencies = [
    "selenium>=4.35.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/ardnico/seleneko"
Repository = "https://github.com/ardnico/seleneko"

[project.scripts]
seleneko = "seleneko.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seleneko*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
